--- a/action.yaml
+++ b/action.yaml
@@ -22,12 +22,12 @@ runs:
     - name: Checkout
       uses: actions/checkout@v3
       with:
-        path: /user-repo
+        path: user-repo
         ref: ${{ inputs.ref }}
     - name: Fetch repo
       uses: actions/checkout@v3
       with:
-        path: /argoanut-action
+        path: argoanut-action
         ref: main
         repository: argonautdev/argonaut-action
         submodules: 'recursive'
