--- a/action.yaml
+++ b/action.yaml
@@ -33,6 +33,8 @@ runs:
         submodules: 'recursive'
     - name: Run Dagger pipeline
       run: |
+        pwd
+        ls -lrt
         ARG_KEY=${{ inputs.arg-key }} ARG_SECRET=${{ inputs.arg-secret }} go run argonaut-action/ci/main.go test /user-repo
       shell: bash
 
