--- a/action.yaml
+++ b/action.yaml
@@ -24,6 +24,7 @@ runs:
       with:
         path: user-repo
         ref: ${{ inputs.ref }}
+        submodules: 'recursive'
     - name: Fetch repo
       uses: actions/checkout@v3
       with:
@@ -35,6 +36,7 @@ runs:
       run: |
         pwd
         ls -lrt
-        ARG_KEY=${{ inputs.arg-key }} ARG_SECRET=${{ inputs.arg-secret }} go run argonaut-action/ci/main.go test /user-repo
+        cd argonaut-action/ci/
+        ARG_KEY=${{ inputs.arg-key }} ARG_SECRET=${{ inputs.arg-secret }} go run argonaut-action/ci/main.go test ../../user-repo
       shell: bash
 
