debugger added for gitlab

--- a/.gitlab-argonaut-ci.yaml
+++ b/.gitlab-argonaut-ci.yaml
@@ -18,13 +18,12 @@ dagger-execute:
   before_script:
     - apk update
     - apk add git
-    - which docker
   image:
     name: golang:alpine
   services:
     - docker:dind
   script:
-    - which docker
+    - docker version
     - ls -lrt
     - pwd
     - user_repo_dir_root=$(pwd)
