--- a/action.yaml
+++ b/action.yaml
@@ -37,8 +37,11 @@ runs:
         submodules: 'recursive'
     - name: Run Dagger pipeline
       run: |
-        user_repo_dir_root=$(pwd)
+        cd user-repo
+        user_repo_dir=$(pwd)
+        SHORT_SHA=$(git rev-parse --short HEAD)
+        cd ..
         cd argonaut-action/ci/
-        ARG_AUTH_TOKEN="${{ inputs.arg-auth-token }}" go run *.go ${{ inputs.task-id }} ${user_repo_dir_root}/user-repo
+        ARG_AUTH_TOKEN="${{ inputs.arg-auth-token }}" go run *.go ${{ inputs.task-id }} ${user_repo_dir}
       shell: bash
 
