--- a/action.yaml
+++ b/action.yaml
@@ -42,9 +42,9 @@ runs:
       run: |
         cd user-repo
         user_repo_dir=$(pwd)
-        SHORT_SHA=$(git rev-parse --short HEAD)
+        GIT_SHORT_SHA=$(git rev-parse --short HEAD)
         cd ..
         cd argonaut-action/ci/
-        ARG_AUTH_KEY="${{ inputs.auth-key }}" ARG_AUTH_SECRET="${{inputs.auth-secret}}" SHORT_SHA=${SHORT_SHA} go run *.go ${{ inputs.task-id }} ${user_repo_dir}
+        ARG_AUTH_KEY="${{ inputs.auth-key }}" ARG_AUTH_SECRET="${{inputs.auth-secret}}" SHORT_SHA="${GIT_SHORT_SHA}" go run *.go ${{ inputs.task-id }} ${user_repo_dir}
       shell: bash
 
