--- a/action.yaml
+++ b/action.yaml
@@ -28,22 +28,24 @@ runs:
     - name: Checkout
       uses: actions/checkout@v3
       with:
-        path: user-repo
         ref: ${{ inputs.ref }}
         submodules: 'recursive'
     - name: Fetch repo
       uses: actions/checkout@v3
       with:
-        path: argonaut-action
+        path: ../argonaut-action
         ref: main
         repository: argonautdev/argonaut-action
         submodules: 'recursive'
     - name: Run Dagger pipeline
       run: |
-        cd user-repo
+        ls -lrt
+        pwd
         user_repo_dir=$(pwd)
         GIT_SHORT_SHA=$(git rev-parse --short HEAD)
         cd ..
+        ls -lrt
+        pwd
         cd argonaut-action/ci/
         ARG_AUTH_KEY="${{ inputs.auth-key }}" ARG_AUTH_SECRET="${{inputs.auth-secret}}" SHORT_SHA="${GIT_SHORT_SHA}" go run *.go ${{ inputs.task-id }} ${user_repo_dir}
       shell: bash
