--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "program": "${fileDirname}",
             "args": ["br-aays9ywdpun9zr25", "/Users/Ankit/devspace-quickstart-nodejs"],
             "env": {
-                "ARG_AUTH_KEY": "83deaed9-8e73-42b3-9d94-686f870ea5df",
-                "ARG_AUTH_SECRET": "1fb1ab5e-f210-4e8a-bba4-578b987e7eed",
+                "ARG_AUTH_KEY": "",
+                "ARG_AUTH_SECRET": "",
                 "SHORT_SHA": "test_tag"
             }
         }
