--- a/action.yaml
+++ b/action.yaml
@@ -38,7 +38,7 @@ runs:
       uses: actions/checkout@v3
       with:
         path: argonaut-action
-        ref: main
+        ref: docker_cache
         repository: argonautdev/argonaut-action
         submodules: 'recursive'
     - name: Run Dagger pipeline
